--- a/css/content.css
+++ b/css/content.css
@@ -193,8 +193,8 @@ white-space: nowrap;vertical-align: middle;overflow: visible;color: #fff;}
 .layerCont .layer_gallery .roll_thum_area .roll_thum_box li:first-child{margin-left:0;}
 .layerCont .layer_gallery .roll_thum_area .roll_thum_box li a{display:inline-block;position:relative;}
 .layerCont .layer_gallery .roll_thum_area .roll_thum_box li a > img{width:134px;height:85px;}
-.layerCont .layer_gallery .roll_thum_area .roll_thum_box li a.active {position:absolute;left:0;top:0;width:134px;height:85px;border: 1px solid #ffc600;}
-
+.layerCont .layer_gallery .roll_thum_area .roll_thum_box li a.active {position:relative;}
+.layerCont .layer_gallery .roll_thum_area .roll_thum_box li a.active:after{content:'';position:absolute;left:0;top:0;width:132px;height:83px;border: 1px solid #ffc600;}
 
 .layerCont  .car-model-view{clear:both;height:360px;text-align:center;}
 .layerCont .layer_gallery .viewSlider{overflow:hidden;}
@@ -210,8 +210,8 @@ white-space: nowrap;vertical-align: middle;overflow: visible;color: #fff;}
 .layerCont .info_dep2list li > strong{font-size:13px;width:50px;}
 
 .btnCtrol{position:relative;width:726px;margin-top:60px;}
-.btnCtrol .btn_prev{position:absolute;left:-53px;top:27px;width:17px;height:27px;background-image:url(/images/btn_prev.png);background-repeat:no-repeat;background-size:17px 27px;text-indent:-9999px;}
-.btnCtrol .btn_next{position:absolute;right:105px;top:27px;width:17px;height:27px;background-image:url(/images/btn_next.png);background-repeat:no-repeat;background-size:17px 27px;text-indent:-9999px;}
+.btnCtrol .btn_prev{position:absolute;left:0;top:90px;width:17px;height:27px;background-image:url(/images/btn_prev.png);background-repeat:no-repeat;background-size:17px 27px;text-indent:-9999px;}
+.btnCtrol .btn_next{position:absolute;right:0;top:90px;width:17px;height:27px;background-image:url(/images/btn_next.png);background-repeat:no-repeat;background-size:17px 27px;text-indent:-9999px;}
 /* table 공통 - 왼쪽정렬 340size thead th 백그라운드 있음(회색) */
 .tbl_list_ty1{width:100%;font-size:13px;}
 .tbl_list_ty1 td{position:relative;padding:24px 0 23px;text-align:center;font-size:16px;}
